// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Command > #addArgument > should throw if argument is added after variadic argument 1`] = `
{
  "additional": [],
  "cause": {
    "argument": "<...>",
    "last": "[num...]",
  },
  "code": 1,
  "id": "kronk/argument-after-variadic",
  "message": "Cannot have argument after variadic argument ([num...])",
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` alias conflict 1`] = `
{
  "additional": [],
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'tz' already exists",
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` name conflict 1`] = `
{
  "additional": [],
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'timezone' already exists",
}
`;

exports[`unit:lib/Command > #addCommand > should throw on non-default \`command\` without \`id\` 1`] = `
{
  "additional": [],
  "code": 1,
  "id": "kronk/no-subcommand-id",
  "message": "Subcommand must have name if not the default subcommand",
}
`;

exports[`unit:lib/Command > #addOption > should throw on long flag conflict 1`] = `
{
  "additional": [],
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '--max' already exists",
}
`;

exports[`unit:lib/Command > #addOption > should throw on short flag conflict 1`] = `
{
  "additional": [],
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '-M' already exists",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (0) 1`] = `""`;

exports[`unit:lib/Command > #usage > should return command usage (1) 1`] = `"[num...]"`;

exports[`unit:lib/Command > #usage > should return command usage (2) 1`] = `"[options] <n>"`;

exports[`unit:lib/Command > #usage > should return command usage (3) 1`] = `"[options] [command] [date]"`;

exports[`unit:lib/Command > #usage > should return command usage (4) 1`] = `"[options] [command]"`;

exports[`unit:lib/Command > #usage > should return command usage (5) 1`] = `"[command]"`;
